--- a/cso-ui/.github/workflows/deploy-angular.yml
+++ b/cso-ui/.github/workflows/deploy-angular.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build Angular app
         run: npm run build -- --configuration production
-        working-directory: ./customer
+        working-directory: ./cso-ui
 
   deploy:
     runs-on: ubuntu-latest
