--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Angular app to Azure Web App
+name: Build & Deploy Angular App to Azure
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
+      # 1️⃣ Checkout your repo
       - uses: actions/checkout@v4
 
       # 2️⃣ Setup Node.js
@@ -59,26 +59,10 @@ jobs:
           </configuration>
           EOL
 
-      # 7️⃣ Upload build artifact (browser folder contents)
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      # 7️⃣ Deploy to Azure Web App directly
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
         with:
-          name: angular-dist
-          path: ./cso-ui/dist/cso-ui/browser
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      # 1️⃣ Download artifact
-      - uses: actions/download-artifact@v4
-        with:
-          name: angular-dist
-          path: ./dist
-
-     - uses: azure/webapps-deploy@v3
-  with:
-    app-name: 'angularui'
-    publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    package: ./dist/browser
+          app-name: 'angularui'   # Your App Service name
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ./cso-ui/dist/cso-ui/browser
