--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the code
+      # 1️⃣ Checkout code
       - uses: actions/checkout@v4
 
       # 2️⃣ Setup Node.js
@@ -33,53 +33,27 @@ jobs:
         run: ng build --configuration production
         working-directory: ./cso-ui
 
-      # 6️⃣ Add web.config to handle Angular routes on Azure
-      - name: Add web.config for Azure routing
-        run: |
-          cat <<EOL > ./cso-ui/dist/cso-ui/browser/web.config
-          <?xml version="1.0" encoding="utf-8"?>
-          <configuration>
-            <system.webServer>
-              <rewrite>
-                <rules>
-                  <rule name="Angular Routes" stopProcessing="true">
-                    <match url=".*" />
-                    <conditions logicalGrouping="MatchAll">
-                      <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                      <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="index.html" />
-                  </rule>
-                </rules>
-              </rewrite>
-              <staticContent>
-                <mimeMap fileExtension=".json" mimeType="application/json" />
-              </staticContent>
-            </system.webServer>
-          </configuration>
-          EOL
-
-      # 7️⃣ Upload browser folder as artifact
+      # 6️⃣ Upload build artifact (browser folder contents)
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: angular-dist
-          path: ./cso-ui/dist/cso-ui/browser
+          path: ./cso-ui/dist/cso-ui/browser/*  # contents only, not folder
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      # 1️⃣ Download the build artifact
+      # 1️⃣ Download artifact
       - uses: actions/download-artifact@v4
         with:
           name: angular-dist
-          path: ./dist
+          path: ./wwwroot
 
       # 2️⃣ Deploy to Azure Web App
       - uses: azure/webapps-deploy@v3
         with:
-          app-name: 'angularui'  # Your Azure App Service name
+          app-name: 'angularui'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./dist
+          package: ./wwwroot
