--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
-      - uses: actions/checkout@v4
+      # 1️⃣ Checkout your code
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       # 2️⃣ Setup Node.js
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
@@ -28,32 +30,41 @@ jobs:
         run: npm install
         working-directory: ./cso-ui
 
-      # 5️⃣ Build Angular app
+      # 5️⃣ Build Angular app for production
       - name: Build Angular app
         run: ng build --configuration production
         working-directory: ./cso-ui
 
-      # 6️⃣ Upload build artifact (browser folder contents)
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: angular-dist
-          path: ./cso-ui/dist/cso-ui/browser/*  # contents only, not folder
+      # 6️⃣ Add web.config for Azure routing
+      - name: Add web.config
+        run: |
+          cat <<EOL > ./cso-ui/dist/cso-ui/web.config
+          <?xml version="1.0" encoding="utf-8"?>
+          <configuration>
+            <system.webServer>
+              <rewrite>
+                <rules>
+                  <rule name="Angular Routes" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions logicalGrouping="MatchAll">
+                      <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                      <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="index.html" />
+                  </rule>
+                </rules>
+              </rewrite>
+              <staticContent>
+                <mimeMap fileExtension=".json" mimeType="application/json" />
+              </staticContent>
+            </system.webServer>
+          </configuration>
+          EOL
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      # 1️⃣ Download artifact
-      - uses: actions/download-artifact@v4
+      # 7️⃣ Deploy to Azure Web App
+      - name: Deploy to Azure
+        uses: azure/webapps-deploy@v3
         with:
-          name: angular-dist
-          path: ./wwwroot
-
-      # 2️⃣ Deploy to Azure Web App
-      - uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'angularui'
+          app-name: 'angularui'  # <-- Your Azure Web App name
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./wwwroot
+          package: ./cso-ui/dist/cso-ui
