--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,10 @@ jobs:
       - name: Build Angular App
         run: npm run build --prefix cso-ui -- --configuration production
 
-      # 5. Deploy to Azure Web App
-      - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
+      # 5️⃣ Login to Azure using Publish Profile
+      - name: Azure Login
+        uses: azure/webapps-deploy@v3
         with:
-          app-name: angularui-e3fqeahrg5b5fbfm   # your Azure Web App name
-          slot-name: Production
+          app-name: 'angularui'  # Replace with your Azure App Service name
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./cso-ui/dist/cso-ui/browser
+          package: ./cso-ui/dist/cso-ui
