--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -1,57 +1,66 @@
 name: Build and Deploy Spring Boot App to Azure
 
-env:
-  AZURE_WEBAPP_NAME: insuranceportal      # <-- set your Azure Web App name
-  JAVA_VERSION: '21'
-  DISTRIBUTION: zulu                       # or adopt your preferred distribution
-
+# Trigger workflow on push to main or manual dispatch
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
 
-permissions:
-  contents: read
+env:
+  AZURE_WEBAPP_NAME: insuranceportal   # Your Azure Web App name
+  JAVA_VERSION: '21'                  # Java version for Spring Boot
+  DISTRIBUTION: 'zulu'                # Java distribution
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./customer     # Maven pom.xml is inside customer
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java
+      # 2️⃣ Setup Java
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.DISTRIBUTION }}
-          cache: 'maven'
+          cache: maven
 
-      - name: Build with Maven
+      # 3️⃣ Build Spring Boot JAR
+      - name: Build Spring Boot JAR
         run: mvn clean package -DskipTests
+        working-directory: ./customer
 
-      - name: Upload JAR artifact
+      # 4️⃣ List target directory (debug)
+      - name: List target folder
+        run: ls -l ./customer/target
+
+      # 5️⃣ Upload artifact for deploy job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: springboot-jar
-          path: './customer/target/*.jar'
+          path: ./customer/target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
+      # 1️⃣ Download artifact from build
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: springboot-jar
+          path: ./customer/target
 
+      # 2️⃣ Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.SPRING_BOOT_SECRET }}
-          package: './customer/target/*.jar'
+          package: ./customer/target/*.jar
