--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -1,66 +1,37 @@
-name: Build and Deploy Spring Boot App to Azure
+name: Build and deploy Spring Boot backend to Azure
 
-# Trigger workflow on push to main or manual dispatch
 on:
   push:
     branches:
-      - main
+      - backend-feature   # deploy only when this branch is pushed
   workflow_dispatch:
 
-env:
-  AZURE_WEBAPP_NAME: insuranceportal   # Your Azure Web App name
-  JAVA_VERSION: '21'                  # Java version for Spring Boot
-  DISTRIBUTION: 'zulu'                # Java distribution
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # 1️⃣ Checkout repo
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Setup Java
-      - name: Setup Java
+      # 2️⃣ Set up Java
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: ${{ env.DISTRIBUTION }}
-          cache: maven
+          java-version: '21'
+          distribution: 'zulu'
+          cache: 'maven'
 
-      # 3️⃣ Build Spring Boot JAR
-      - name: Build Spring Boot JAR
-        run: mvn clean package -DskipTests
+      # 3️⃣ Build the Spring Boot backend
+      - name: Build backend
         working-directory: ./customer
+        run: mvn clean package -DskipTests
 
-      # 4️⃣ List target directory (debug)
-      - name: List target folder
-        run: ls -l ./customer/target
-
-      # 5️⃣ Upload artifact for deploy job
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: springboot-jar
-          path: ./customer/target/*.jar
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      # 1️⃣ Download artifact from build
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: springboot-jar
-          path: ./customer/target
-
-      # 2️⃣ Deploy to Azure Web App
+      # 4️⃣ Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: insuranceportal
           publish-profile: ${{ secrets.SPRING_BOOT_SECRET }}
-          package: ./customer/target/*.jar
+          package: './customer/target/customer-0.0.1-SNAPSHOT.jar'
+          slot-name: production
